[gd_scene load_steps=16 format=2]

[ext_resource path="res://gui/screens/login/scripts/LoginScreen.gd" type="Script" id=1]
[ext_resource path="res://gui/screens/login/assets/GUI.png" type="Texture" id=2]
[ext_resource path="res://gui/screens/login/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://music/xDeviruchi - Take some rest and eat some food!.wav" type="AudioStream" id=4]
[ext_resource path="res://gui/screens/main_screen/assets/1.png" type="Texture" id=5]
[ext_resource path="res://gui/screens/main_screen/assets/2.png" type="Texture" id=6]
[ext_resource path="res://gui/screens/main_screen/assets/4.png" type="Texture" id=7]
[ext_resource path="res://gui/screens/main_screen/assets/3.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 31
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 7
extra_spacing_bottom = 7
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 2 )
region_rect = Rect2( 145, 113, 46, 14 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 145, 98, 46, 13 )
modulate_color = Color( 0.698039, 0.701961, 1, 1 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 2 )
region_rect = Rect2( 145, 81, 46, 14 )

[node name="LoginScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -991, -262 )
script = ExtResource( 1 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -160.0
margin_right = 146.0
margin_bottom = 160.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 100, 100 )
custom_constants/separation = 5

[node name="titleLbl" type="Label" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "LOG IN
"
align = 1

[node name="Panel2" type="Panel" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 70.0
margin_right = 292.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 10 )

[node name="UsernameLbl" type="Label" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 292.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 11 )
text = "Username"

[node name="Username" type="LineEdit" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 292.0
margin_bottom = 128.0

[node name="PasswordLbl" type="Label" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 292.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 11 )
text = "Password"

[node name="Password" type="LineEdit" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 292.0
margin_bottom = 176.0
secret = true

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
visible = false
margin_top = 161.0
margin_right = 292.0
margin_bottom = 185.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 13 )
text = "Remember me"

[node name="Panel" type="Panel" parent="VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 181.0
margin_right = 292.0
margin_bottom = 211.0
rect_min_size = Vector2( 0, 30 )

[node name="LoginBtn" type="Button" parent="VBoxContainer"]
modulate = Color( 0.121569, 0.984314, 0, 1 )
margin_left = 86.0
margin_top = 216.0
margin_right = 206.0
margin_bottom = 256.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 2 )
text = "LOG IN"

[node name="BackBtn" type="Button" parent="VBoxContainer"]
margin_left = 86.0
margin_top = 261.0
margin_right = 206.0
margin_bottom = 301.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 6
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 12 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 2 )
text = "BACK"

[node name="NotificationLbl" type="Label" parent="VBoxContainer"]
margin_top = 306.0
margin_right = 292.0
margin_bottom = 320.0

[node name="Sprite" type="Sprite" parent="VBoxContainer"]
position = Vector2( -55, -58 )
scale = Vector2( 8.88636, 9.75 )
z_index = -1
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 34, 44, 44 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Layer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/Layer1"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 5 )
centered = false

[node name="Layer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/Layer2"]
position = Vector2( -5.00003, -7.00003 )
scale = Vector2( 3.34549, 3.33642 )
texture = ExtResource( 6 )
centered = false

[node name="Layer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/Layer3"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 8 )
centered = false

[node name="Layer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/Layer4"]
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 7 )
centered = false

[connection signal="pressed" from="VBoxContainer/LoginBtn" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackBtn" to="." method="_on_BackBtn_pressed"]
